# odrpack95

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  analysis_previous.txt  api-doc-ford.md  codecov.yml  fpm.toml  meson.build  meson.options  pytest.ini  report5.txt
.github/: CI.yml
.github/workflows/: CI.yml  pages.yml  pages.yml_  test.yml  test.yml_  test2.yml
c/: README.md  meson.build  odrpack_c.f90  odrpack_capi.f90
c/example/: CMakeLists.txt  build.bat  build.sh  example3.c  example5.c  meson.build
c/include/odrpack/: odrpack.h
c/include/ordpack/: odrpack.h
example/: CMakeLists.txt  analysis_example5.txt  example1.f  example1.f90  example2.f  example2.f90  example3.f  example3.f90  example4.f  example4.f90  example5.f90  meson.build
include/: odrpack.h
include/odrpack/: odrpack.h
python/: README.md  _odrpack.py.cpp  meson.build  pyproject.toml  requirements-build.txt  requirements-dev.txt
python/odrpack/: __init__.py
python/src/odrpack/: __init__.py  __odrpack.py.cpp  __odrpack.pyi  driver.py  exceptions.py  result.py
python/tests/: test_odrpack.py
src/: blas.f  blas_interfaces.f90  dodlm.f90  dodmn.f90  linpack.f  lpkbls.f  odr.f  odr.f90  odrpack.f90  odrpack2.f90  odrpack95_kinds.F90  odrpack_c.f90  odrpack_capi.f90  odrpack_core.f90  odrpack_kinds.F90  odrpack_kinds.f90  odrpack_reporting.f90  odrpack_reports.f90  real_precision.f90
test/: CMakeLists.txt  meson.build  test.f  test_error_detection.f  test_error_detection.f90  test_solution.f  test_solution.f90
